# yew-primer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  nginx.conf
src/: lib.rs  main.rs
src/app/: app.rs  routes.rs
src/pages/: apod.rs  home.rs  mod.rs
