[package]
name = "yew-primer"
version = "0.1.0"
edition = "2021"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
serde_json = "1.0.107"
